--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "tsup": "^8.2.1",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "axios": "^1.7.2",
+    "discord.js": "^14.15.3",
+    "dotenv": "^16.4.5"
   }
 }
